--- a/src/Layout/RightNav.scss
+++ b/src/Layout/RightNav.scss
@@ -2,7 +2,7 @@
   border-color: #f8fafc;
   display: flex;
   flex-direction: column;
-  background-color:gray;
+  // background-color:gray;
   .pages {
     line-height: 2rem;
   }
