--- a/src/Components/Upper-right.scss
+++ b/src/Components/Upper-right.scss
@@ -21,7 +21,7 @@
             display: flex;
             align-items: center;
             flex-direction: row;
-            // gap: 2rem;
+            gap: 2rem;
             color: #94A3B8;
             justify-content: space-between;
             img{
