--- a/src/Layout/MainContent.scss
+++ b/src/Layout/MainContent.scss
@@ -4,6 +4,8 @@
    display: flex;
    align-items: center;
    flex-direction: column;
+   // overflow-: hidden;
+
    .lower-stage{
       display: flex;
       gap: 3.5rem;
