--- a/src/App.scss
+++ b/src/App.scss
@@ -13,5 +13,9 @@
 .container{
     display: flex;
     flex-direction: row;
+    background-color:#F8FAFC;
+    position: relative;
+    // border: 2px solid green;
+ 
     // background-color: #f90c0c;
 }
