--- a/src/Components/Complete.scss
+++ b/src/Components/Complete.scss
@@ -1,10 +1,9 @@
 .compelete-profile {
   max-width: 100%;
   max-height: 89px;
-  color: #ffffff;
   align-items: center;
   display: flex;
-  margin-top: 2rem;
+  // background-color: rgb(0, 0, 0);
   .content {
   
     width: 230px;
