--- a/src/Components/Intro.scss
+++ b/src/Components/Intro.scss
@@ -1,36 +1,38 @@
 .upper {
   display: flex;
-  // align-items: center;
   flex-direction: column;
+  // background-color: rgb(89, 150, 204);
+  border-radius: 5px;
+  // margin: 2px 2px,2px,2px;
   .nav {
     display: flex;
     justify-content: space-between;
     color: rgb(0, 0, 0);
-// background-color: aqua
-;    align-items: center;
-
+    align-items: center;
   }
   .text {
     font-size: 12px;
     color: #64748b;
     font-weight: 500;
+    
+    // margin: 2px;
   }
-  .maps{
-   display: flex;
-   flex-direction: column;
-   line-height: 1px;
-   
-   .map1{
+  .maps {
+    display: flex;
+    flex-direction: column;
+    line-height: 1px;
+
+    .map1 {
       display: flex;
       align-items: center;
       gap: 1rem;
-    
-      p{
-         font-size: 14px;
+
+      p {
+        font-size: 14px;
       }
-   }
-   p{
+    }
+    p {
       font-size: 14px;
-   }
+    }
   }
 }
