--- a/src/Components/Lower.scss
+++ b/src/Components/Lower.scss
@@ -1,7 +1,6 @@
-.main1 {
-//   display: flex;
-//   background-color: aqua;
-  .nav1 {
+.main2 {
+// background-color: rgb(5, 55, 99);
+  .nav2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
