--- a/src/Components/Groups.scss
+++ b/src/Components/Groups.scss
@@ -1,21 +1,29 @@
-.groups{
-   margin-left: 2rem;
-   font-size: 10px;
-   .conc{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      color: #94A3B8;
-   }
+.groups {
+  margin-left: 0.7rem;
+  font-size: 12px;
+  width: 100%;
+  font-weight: 500;
+  .conc {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #94a3b8;
+    a {
+      text-decoration: none;
+    }
+  }
 
-   .Groups{
-      align-items: center;
+  .Groups {
+    align-items: center;
+    display: flex;
+    img {
+      width: 30px;
+    }
+    .Groups-left {
       display: flex;
-      .Groups-left{
-         display: flex;
-         align-items: center;
-         gap: 1rem;
-         // justify-content: center;
-      }
-   }
+      align-items: center;
+      gap: 1rem;
+      // justify-content: center;
+    }
+  }
 }
