--- a/src/Components/LeftNav.scss
+++ b/src/Components/LeftNav.scss
@@ -1,5 +1,9 @@
 .left1{
-   padding: 1rem;
-   // background-color:grey;
-   margin-top: 1rem;
+   flex: 1;
+   // gap: 3rem;
+   // background-color: greenyellow;
+   margin-top: 2rem;
+   width: 100%;
+   right: 0;
+
 }
