--- a/src/Components/Menu.scss
+++ b/src/Components/Menu.scss
@@ -5,8 +5,10 @@
   .menu-left {
     align-items: center;
     display: flex;
-    font-size: 10px;
+    font-size: 14px;
     gap: 1.5rem;
+    color: black;
+    font-weight: 500;
     img {
       width: 20px;
     }
