--- a/src/Components/Right.scss
+++ b/src/Components/Right.scss
@@ -1,4 +1,6 @@
 .right1{
    // background-color: gray;
-   margin-top: 1rem;
+   margin-top: 2rem;
+   background-color: #ffffff;
+   border-radius: 10px;
 }
