--- a/src/Components/Upper-main.scss
+++ b/src/Components/Upper-main.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     max-height: 336px;
-    // background-color: cadetblue;
+    background-color: cadetblue;
   }
   .main-profile {
     align-items: start;
@@ -26,6 +26,13 @@
       h4 {
         font-size: 10px;
       }
+      img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 30px;
+        transform: translateY(-50%);
+      }
     }
     .likes {
       display: flex;
@@ -42,13 +49,6 @@
         font-weight: 500;
         font-size: 16px;
       }
-    }
-    img {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-left: 30px;
-      transform: translateY(-50%);
     }
   }
 }
