--- a/src/Layout/SideNav.scss
+++ b/src/Layout/SideNav.scss
@@ -4,9 +4,22 @@
   gap: 20px;
   height: 100vh;
   border-right: 1px solid rgb(245, 239, 239);
-  width: 15%;
+  width: 200px;
   margin: 10px;
-  line-height: 2rem;
+  line-height: 1rem;
+  margin-top: 80px;
+  position: fixed;
+  .sidenav-suggestions{
+    // background-color: red;
+    h5{
+      color:#94A3B8;
+      font-size: 10px;
+      // font-weight: 500;
+  
+    }
+
+  }
+
   h4 {
     font-size: 10px;
   }
@@ -17,7 +30,8 @@
     .side-profile-text {
       flex-direction: column;
       margin-inline: 20px;
-      // line-height: 1px;
+      align-items: center;
+      line-height: 1px;
     }
   }
 }
