--- a/src/Layout/MainContent.scss
+++ b/src/Layout/MainContent.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  position: relative;
+  // position: relative;
   margin-top: 80px;
   overflow: hidden;
 
