--- a/src/multi-pages/Notifications.scss
+++ b/src/multi-pages/Notifications.scss
@@ -9,7 +9,7 @@
   border-radius: 10px;
   overflow: hidden;
   width: 380px;
-  position: absolute;
+  // position: absolute;
   margin-left: 300px;
   box-shadow: 5px 5px 10px 5px rgba(9, 38, 49, 0.25);
   z-index: 1;
