--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 *{
    box-sizing: border-box;
-   font-family:'Inter', sans-serif;
+   font-family:'Inter' , sans-serif;
    
 
    &::-webkit-scrollbar {
@@ -10,12 +10,18 @@
    }
 
    }
-.container{
+.main-container{
     display: flex;
     flex-direction: row;
     background-color:#F8FAFC;
     position: relative;
-    // border: 2px solid green;
  
-    // background-color: #f90c0c;
+}
+/* Example media query for small screens */
+@media screen and (max-width: 1024px) {
+    /* CSS rules for small screens */
+    .main-container{
+        border: 2px solid black;
+    }
+
 }
