--- a/src/Layout/MainContent.scss
+++ b/src/Layout/MainContent.scss
@@ -15,3 +15,18 @@
     gap: 3.5rem;
   }
 }
+/* Example media query for small screens */
+@media screen and (max-width: 768px) {
+  /* CSS rules for small screens */
+
+.main1{
+  width: 100%;
+  .lower-stage{
+    
+  }
+
+  
+}
+  
+}
+
